Dark Mode fix - alert--secondary

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -142,7 +142,7 @@ html[data-theme='dark'] {
   --row-2-color: #1c1e21;
   --row-title-color: #000000;
   --box-color: #606770;
-  --ifm-color-secondary: #4a4a4a;
+  --ifm-color-secondary: #a1a1a1;
 }
 
 /*.navbar__logo {*/
